fixing alignment issues with logo

--- a/style.css
+++ b/style.css
@@ -117,7 +117,7 @@ ul ul li a:hover{
 .navbar-brand{
   font-size: 24px; /*36px;*/
   font-weight: 600;
-  padding: 0px 15px;
+  padding: 5px 28px;
   height:65px;
   color:#4A4A4A;
   font-family: "Oxygen","Pacifico";
